--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,9 @@
+FROM mjgargani/puppeteer:trybe1.0
 
+WORKDIR /docker
+
+ADD node_modules.tar.gz .
+
+COPY . ./docker/todo-app/tests
+
+ENTRYPOINT [ "npm test" ]
